Fix logo distortion by using rotateZ instead of rotateY+rotateX
Amp-Thread-ID: https://ampcode.com/threads/T-57a8bf0b-2228-40ce-a377-dda90bfc34a2

--- a/styles.css
+++ b/styles.css
@@ -113,19 +113,19 @@ body {
 
 @keyframes verticalSpin {
     0% {
-        transform: rotateY(0deg) rotateX(10deg);
+        transform: rotateZ(0deg);
     }
     25% {
-        transform: rotateY(90deg) rotateX(5deg);
+        transform: rotateZ(90deg);
     }
     50% {
-        transform: rotateY(180deg) rotateX(10deg);
+        transform: rotateZ(180deg);
     }
     75% {
-        transform: rotateY(270deg) rotateX(15deg);
+        transform: rotateZ(270deg);
     }
     100% {
-        transform: rotateY(360deg) rotateX(10deg);
+        transform: rotateZ(360deg);
     }
 }
 
